Fix more 14 layout issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -73,27 +73,21 @@ input.input-inline {
 /**
  * Generic app layout
  */
-#content-wrapper {
-	overflow: hidden;
-	position: fixed;
+
+#content {
+	height: 100%;
+	min-height: initial;
+}
+
+.app.app-deck {
 	width: 100%;
 	height: 100%;
+	display: flex;
+}
 
-	#content {
-		height: calc(100% - 50px);
-		min-height: initial;
-	}
-
-	.app.app-deck {
-		width: 100%;
-		height: 100%;
-		display: flex;
-	}
-
-	#app-content {
-		display: flex;
-		flex-direction: column;
-	}
+#app-content {
+	display: flex;
+	flex-direction: column;
 }
 
 /**
